# bib-enrich-mcp

./: README.md  pyproject.toml
src/bib_enrich_mcp/: bib_parser.py  scrapers.py  server.py
tests/: test_bib_parser.py  test_scrapers.py  test_server.py
