[project]
name = "bib-enrich-mcp"
version = "0.1.0"
description = "MCP Server for fixing and enriching BibTeX bibliography metadata"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "HAO Xiang", email = "haoxiangsnr@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "bibtexparser>=1.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/haoxiangsnr/bib-enrich-mcp"
Repository = "https://github.com/haoxiangsnr/bib-enrich-mcp"

[project.scripts]
bib-enrich-mcp = "bib_enrich_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bib_enrich_mcp"]

[tool.uv]
package = true
